plugins {
	id 'application'
	id 'java'
	id("io.freefair.aspectj.post-compile-weaving") version "9.0.0"
}

application {
    mainClass = 'me.kotsu.Main'
}

run {
    doFirst {
        def weaverJar = configurations.runtimeClasspath.find { it.name.contains('aspectjweaver') }
        if (weaverJar == null) {
            throw new GradleException("aspectjweaver.jar not found in runtimeClasspath")
        }
        //jvmArgs "-javaagent:${weaverJar.absolutePath}"
        jvmArgs(
            "-javaagent:${weaverJar.absolutePath}",
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
            "--add-opens=java.base/sun.misc=ALL-UNNAMED"
        )
    }
}

group = 'me.kotsu'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	//jcenter()
}

dependencies {
	implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'ch.qos.logback:logback-classic:1.5.7'

	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	implementation 'commons-net:commons-net:3.12.0'
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.5.1'
	
	testImplementation 'org.apache.ftpserver:ftpserver-core:1.2.0' //testowy serwer FTP
	
	implementation 'com.google.code.gson:gson:2.13.2'
	
	compileOnly("org.projectlombok:lombok:1.18.42")
	annotationProcessor("org.projectlombok:lombok:1.18.42")
	
	testCompileOnly("org.projectlombok:lombok:1.18.42")
	testAnnotationProcessor("org.projectlombok:lombok:1.18.42")
	
	implementation "org.aspectj:aspectjrt:1.9.24"
    implementation "org.aspectj:aspectjweaver:1.9.24"
    implementation "org.aspectj:aspectjtools:1.9.24"
}

tasks.named('test') {
	useJUnitPlatform()
}

processResources.duplicatesStrategy='include'